# pages

./: .gitignore  Cargo.toml
backend/: Cargo.toml
backend/config/db/: schema.yaml
backend/config/db/migrations/: 1648660850300_discover_migration.yaml
backend/src/: main.rs
frontend/: Cargo.toml
frontend/src/: aloy_page.rs  app.rs  cat_page.rs  crab_page.rs  fox_page.rs  header.rs  lib.rs  pond_page.rs  router.rs
shared/: Cargo.toml
shared/src/: lib.rs
